<resources>
    <string name="app_name">Dash</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_navigation">Login</string>
    <string name="action_login_short">log</string>
    <string name="action_register_navigation">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">Back</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="dash_logo">Dash Logo</string>
    <string name="action_logout">Sign out</string>
    <string name="action_register">Register</string>
    <string name="dash">Dash</string>
    <string name="reddit">Reddit</string>
    <string name="twitter">Twitter</string>
    <string name="signout">Sign Out</string>

    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="trends">Trends</string>
    <string name="test">test</string>
    <string name="addReddit">Add a Reddit Account</string>
    <string name="addTwitter">Add a Twitter Account</string>
    <string name="readMore">Read More..</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="resetPass">Reset Password</string>

</resources>
